--- a/quote.css
+++ b/quote.css
@@ -5,3 +5,16 @@
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
+
+.quote-box{
+    background: #fff;
+    width:700px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    padding: 40px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
