comple css is applied

--- a/quote.css
+++ b/quote.css
@@ -6,6 +6,9 @@
     font-family: 'Roboto', sans-serif;
 }
 
+body{
+    background: #bbc6fa;
+}
 .quote-box{
     background: #fff;
     width:700px;
@@ -17,4 +20,83 @@
     border-radius: 10px;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.quote-box h2{
+    font-size: 32px;
+    margin-bottom: 40px;
+    position: relative;
+}
+
+.quote-box h2::after{
+    content:'';
+    width: 75px;
+    height:3px;
+    border-radius: 3px;
+    background: rgb(23, 124, 229);
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translate(-50%);
+}
+.quote-box blockquote{
+    font-size: 25px;
+    min-height: 110px;
+}
+
+.quote-box blockquote::before,.quote-box blockquote::after{
+    content: '"';
+}
+
+.quote-box span{
+    display: block;
+    margin-top: 10px;
+    float: right;
+    position: relative;
+}
+
+.quote-box span::before{
+    content: '';
+    width: 20px;
+    height: 2px;
+    border-radius: 3px;
+    background: rgb(23, 124, 229);
+    position: absolute;
+    top: 50%;
+    left:-30px;
+}
+
+.quote-box div{
+    width: 100%;
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-box button{
+    background: rgb(23, 124, 229);
+    outline: none;
+    border: 1px solid rgb(23, 124, 229);
+    border-radius: 25px;
+    padding: 10px;
+    color: #fff;
+    width: 150px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 5px;
+    cursor: pointer;
+
+}
+
+button img{
+    width: 20%;
+    margin-right: 10px;
+}
+
+.quote-box button:nth-child(2){
+    background: transparent;
+    color: #bbc6fa;
+    color: black;
 }
